Added random background image and opacity to weather display

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     </div>
   </nav>
   
-  <div class="container">
-    <div class="row">
+  <div class="container mt-5">
+    <div class="row mt-5">
       <div class="col">
         <!-- Weather card -->
-        <div class="">
+        <div class="card mt-5">
           <!-- Search Div -->
           <div class="search">
             <!-- City Input -->
@@ -44,7 +44,7 @@
           <!-- Weather Info -->
           <div class="weather">
             <h1 class="city">Weather in Dublin</h1>
-            <div class="temp">15c</div>
+            <div class="temp">15C</div>
             <div class="description">Showers</div>
             <div class="humidity">Humidity: 50%</div>
             <div class="wind">Wind Speed: 5km/h</div>
