Added the CSS for the UI

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
           <!-- Search Div -->
           <div class="search">
             <!-- City Input -->
-            <input type="text" class="search-bar">
+            <input type="text" class="search-bar" placeholder="Enter city/town"><br>
             <!-- Search Button -->
-            <button class="btn">Search</button>
+            <button class="btn search_button"><i class="fas fa-search"></i> Search</button>
           </div>
           <!-- Weather Info -->
           <div class="weather">
-            <h1 class="city">Weather in Dublin</h1>
+            <h1 class="city mb-2 mt-1">Weather in Dublin</h1>
             <div class="temp">15C</div>
             <div class="description">Showers</div>
             <div class="humidity">Humidity: 50%</div>
