Added JS functionality and ready to deploy

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        <i class="fas fa-sun"></i>
         Weather App
       </a>
     </div>
   </nav>
   
-  <div class="container mt-5">
-    <div class="row mt-5">
+  <div class="container mt-4">
+    <div class="row mt-4">
       <div class="col">
         <!-- Weather card -->
         <div class="card mt-5">
@@ -43,11 +43,13 @@
           </div>
           <!-- Weather Info -->
           <div class="weather">
-            <h1 class="city mb-2 mt-1">Weather in Dublin</h1>
-            <div class="temp">15C</div>
-            <div class="description">Showers</div>
-            <div class="humidity">Humidity: 50%</div>
-            <div class="wind">Wind Speed: 5km/h</div>
+            <h1 class="city mb-2 mt-1"></h1>
+            <div class="country"></div>
+            <div class="temp"></div>
+            <div class="description"></div>
+            <img class="icon" alt="">
+            <div class="humidity"></div>
+            <div class="wind"></div>
           </div>
         </div>
       </div>
